--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,18 @@
 {
-   "editor.defaultFormatter": "Dart-Code.dart-code",
-   "editor.formatOnSave": true
+   "[dart]": {
+      "editor.formatOnSave": true,
+      "editor.formatOnType": true,
+      "editor.selectionHighlight": false,
+      "editor.suggest.snippetsPreventQuickSuggestions": false,
+      "editor.suggestSelection": "first",
+      "editor.tabCompletion": "onlySnippets",
+      "editor.wordBasedSuggestions": "off",
+      "editor.codeActionsOnSave": {
+         "source.fixAll": "explicit"
+      }
+   },
+   "errorLens.enabledDiagnosticLevels": [
+      "error",
+      "warning"
+   ],
 }
