--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,11 @@ dependencies:
   firebase_core: ^4.2.1
   cloud_firestore: ^6.1.0
   js: ^0.7.2
-  intl: ^0.20.2
-  uuid: ^4.5.2
+  http: ^1.6.0
+  url_launcher: ^6.3.2
+
+
+
 
 dev_dependencies:
   flutter_test:
