--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,6 @@
 analyzer:
   errors:
+    avoid_web_libraries_in_flutter: ignore
     deprecated_member_use: ignore
     use_build_context_synchronously: ignore
 include: package:flutter_lints/flutter.yaml
